@@ -11,8 +11,8 @@ import math
 import calib_io as calib
 
 class Encoder():
-    TESTING = True
-    TEST_WRITE = True
+    TESTING = False
+    TEST_WRITE = False
     step_count = ()
     LENCODER = 17
     RENCODER = 18
